# noglobal

./: .gitignore  README.md  pyproject.toml
noglobal/: __init__.py
