[project]
name = "noglobal"
version = "1.0.3"
authors = [
    { name="Tatsuhiko Nakamine", email="bilzard@example.com" },
]
description = "My python utility functions"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/bilzard/noglobal"
"Bug Tracker" = "https://github.com/bilzard/noglobal/issues"
